{
    "name": "TestControls",
    "maps": [
        {
            "name": "DS4",
            "id": "ce69279b-0d28-4750-9ecd-4ef2f0d6d666",
            "actions": [
                {
                    "name": "D-PadDown",
                    "type": "Button",
                    "id": "129652e1-a825-410d-8a4c-d2aa45fae177",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "D-PadUp",
                    "type": "Button",
                    "id": "7a9b22fc-0d67-46af-8af4-8b305e108106",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "D-PadLeft",
                    "type": "Button",
                    "id": "4576ea15-249f-4196-b8ca-5e0ee3349142",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "D-PadRight",
                    "type": "Button",
                    "id": "bf7d6b74-146a-4ee6-8390-fbeacbe420f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Circle",
                    "type": "Button",
                    "id": "8f224898-bd7f-4c02-a50d-1c693ab75341",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Triangle",
                    "type": "Button",
                    "id": "ffdb5f9b-8d33-4057-aab9-65feb8b33101",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Square",
                    "type": "Button",
                    "id": "7e7d2019-8500-47bd-9680-3cc0ec1fcbf3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Cross",
                    "type": "Button",
                    "id": "cc785968-64ee-4f66-aad1-43f0eb58fb96",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftStickX",
                    "type": "Value",
                    "id": "f684b175-bc00-4612-856a-62f1ef7df522",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftStickY",
                    "type": "Value",
                    "id": "c9c79454-17f7-4631-830b-1d6a69255cc4",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightStickX",
                    "type": "Value",
                    "id": "c3f8e1d1-e328-4dbf-9036-c4b67de7eb77",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightStickY",
                    "type": "Value",
                    "id": "7b67c658-a8a8-4c52-8266-f33ccfd99d88",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Options",
                    "type": "Button",
                    "id": "50a65df4-89cd-4fac-b107-fd82dbefdcec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Share",
                    "type": "Button",
                    "id": "36d030dd-4024-4290-9819-420858d24f12",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "System",
                    "type": "Button",
                    "id": "34c1a22a-0123-4e13-bdbb-fc0ab7b35ac6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pad",
                    "type": "Button",
                    "id": "905a1ff5-8b66-42a6-bf9a-ce75d1c1a448",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "L1",
                    "type": "Button",
                    "id": "65c42916-afa5-4c8b-806d-c0bb70be190e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "L2Btn",
                    "type": "Button",
                    "id": "9cd4e209-4ec9-4099-a032-9900bb642aee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "L2Axis",
                    "type": "Value",
                    "id": "36828e75-c3e4-4297-8b99-486545f66f40",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "L3",
                    "type": "Button",
                    "id": "2fd70540-1fd9-45eb-8afe-49def6e1b831",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "R1",
                    "type": "Button",
                    "id": "8b79076b-d057-4f5d-a57a-9810b97e96a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "R2Btn",
                    "type": "Button",
                    "id": "c022df03-bebb-4a81-8ac2-78456d381e68",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "R2Axis",
                    "type": "Value",
                    "id": "41037a89-44d7-43e1-adcd-016d54001252",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "R3",
                    "type": "Button",
                    "id": "22c60a5f-e3af-441b-8fcb-3795c5ebdc2c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8eaf8e87-daf2-4266-bdcc-15b4f605453e",
                    "path": "<DualShockGamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "D-PadDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90d02baf-1e16-4483-9171-e609b6c89aa3",
                    "path": "<DualShockGamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "D-PadUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7845c47e-4cbc-469f-975f-ac6ce2132e86",
                    "path": "<DualShockGamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "D-PadLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b509f574-9277-464b-b99a-32ff1c879c36",
                    "path": "<DualShockGamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "D-PadRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f37909d9-a59c-4d97-80f9-5c319b331e7b",
                    "path": "<DualShockGamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Circle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c1a78790-e56c-4bb1-a7b9-c9d1550ec9fd",
                    "path": "<DualShockGamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Triangle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c812dd3-58ee-47c3-9e80-ecb46b550982",
                    "path": "<DualShockGamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Square",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c3e00cd-472a-4ee6-bcc9-384492d7e302",
                    "path": "<DualShockGamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cross",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5f54c47d-bbb2-4681-9c54-cbd0aff916a0",
                    "path": "<DualShockGamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStickX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "250b1b97-a23c-450d-97e3-82da5cac4adf",
                    "path": "<DualShockGamepad>/leftStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStickY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "255eb464-585b-4f34-9995-d3afe2a2499a",
                    "path": "<DualShockGamepad>/rightStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStickX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "160cd0b1-515c-4167-b1c2-b411c94f77fe",
                    "path": "<DualShockGamepad>/rightStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStickY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "40e829d8-b282-4709-a7d1-b8448e86aec5",
                    "path": "<DualShockGamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Options",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a1d31a8-a67d-40f5-9567-ee850b7613fc",
                    "path": "<DualShockGamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Share",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b8fbfda4-c381-48e1-8c4e-cb7954dfada9",
                    "path": "<DualShockGamepad>/systemButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "System",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a3238b6-e480-425d-bca5-5be0dea3576c",
                    "path": "<DualShockGamepad>/touchpadButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00b513bd-9ab9-4d92-a7de-3a25b2498099",
                    "path": "<DualShockGamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "L1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf3b2bc8-2646-4132-a9af-8a1e97d4ece1",
                    "path": "<DualShockGamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "L2Btn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea2ab448-e509-43bc-9713-515676ff74d9",
                    "path": "<DualShockGamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "L2Axis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a69677ac-82f3-4c0f-b1a3-3e63f4af24eb",
                    "path": "<DualShockGamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "L3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e8d7e014-4862-42bd-8f1f-feff075776d6",
                    "path": "<DualShockGamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "R1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8f89b20-e98e-4a9a-807d-29c3e90e1a70",
                    "path": "<DualShockGamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "R2Btn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41540315-2be7-4a3a-bb2d-579c631c36b2",
                    "path": "<DualShockGamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "R2Axis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc08ac2a-bc12-40c3-8cac-33bdee7b40e4",
                    "path": "<DualShockGamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "R3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}